argocd/applications/keycloak/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "300"
spec:
  parentRefs:
  - name: public
    namespace: network
    sectionName: keycloak
  hostnames:
  - "keycloak.yourdomain.example" # todo: adjust to your domain
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-admin
  annotations:
    argocd.argoproj.io/sync-wave: "300"
spec:
  parentRefs:
  - name: public
    namespace: network
    sectionName: keycloak-admin
  hostnames:
  - "keycloak-admin.yourdomain.example" # todo: adjust to your domain
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak-service
      port: 8080
